# playground_movielens

./: README.md
python/: pyproject.toml
python/notebooks/: BPR.ipynb  makeDataset.ipynb
