[tool.poetry]
name = "playground-movielens"
version = "0.1.0"
description = ""
authors = ["keeeeei79 <keeeeei79@gmail.com>"]
readme = "README.md"
packages = [{include = "playground_movielens"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
implicit = "^0.7.0"
h5py = "^3.9.0"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.14.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
